Edited UI for linux